<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <TextView-->
        <!--            android:id="@+id/delete_habit_dialog_name"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Delete Habit?"-->
        <!--            android:textSize="26sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <Button-->
        <!--            android:id="@+id/ok_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="@dimen/spacing"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:text="Ok"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@id/cancel_button"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/delete_habit_dialog_name" />-->

        <!--        <Button-->
        <!--            android:id="@+id/cancel_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:text="Cancel"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/ok_button"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/delete_habit_dialog_name" />-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:gravity="center"
            android:text="Edit Habit"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:autofillHints="Password"
            android:hint="@string/create_habit_name_hint"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/habit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:autofillHints="Password"
            android:hint="@string/create_habit_desc_hint"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_name" />

        <TextView
            android:id="@+id/date_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:gravity="center"
            android:text="Date: "
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@id/set_date_time_btn_create_habit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_dropdown" />

        <Button
            android:id="@+id/set_date_time_btn_create_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:text="@string/set_date_btn_text_create_habit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date_time_view"
            app:layout_constraintTop_toBottomOf="@id/type_dropdown" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/habit_repeat_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:text="@string/repeat_checbox_text"
            app:layout_constraintEnd_toStartOf="@id/repeat_dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_date_time_btn_create_habit" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/repeat_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"

            android:entries="@array/habit_repeat_period"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/habit_repeat_check"
            app:layout_constraintTop_toBottomOf="@id/set_date_time_btn_create_habit" />

        <Button
            android:id="@+id/edit_habit_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edit_habit_cancel_btn"
            app:layout_constraintTop_toBottomOf="@id/edit_habit_delete_btn" />

        <Button
            android:id="@+id/edit_habit_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@id/edit_habit_save_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_habit_delete_btn" />

        <Button
            android:id="@+id/edit_habit_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:text="@string/delete_habit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat_dropdown" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/type_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"

            android:entries="@array/habit_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/habit_type_label"
            app:layout_constraintTop_toBottomOf="@id/habit_desc" />

        <TextView
            android:id="@+id/habit_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:gravity="center"
            android:text="Habit Type:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@id/type_dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/habit_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

